@@ -2,14 +2,13 @@
 Hash: SHA256
 
 DIST krb5-auth-0.7.gem 17920 RMD160 8f0fe9412432c9c782eaeb483c8bcd75b1d09828 SHA1 a6c70a21281a07d312fd278cb6292811f6e90bf8 SHA256 35aaf49c7132dee136fed295c59050f74fd4400d9884cf65c024ed773c115d1f
-EBUILD krb5-auth-0.7-r1.ebuild 1179 RMD160 3ead88c026c3468e262376fd74407871cc06d799 SHA1 350f6e827d8b809e95980261f0294825d0558530 SHA256 37cb0e9314839886b476d5d0c32fd6efefd88a843b7829b0bea2374c71d61533
-EBUILD krb5-auth-0.7.ebuild 997 RMD160 af39abd94c92e42395ee4496bf0626c52607eefc SHA1 d2b8a00687047a11557425979514b078a14cf966 SHA256 8d90c84866b625c0546b3e61709e2adfb1cc31864aeef695287b3feedadaaf73
-MISC ChangeLog 464 RMD160 4ba470281da3fcb9654bba9a288d2a4c10b61d26 SHA1 c3f37ff1a3e789f5ae1b095e9fb3336a9d08b55f SHA256 c5bed16e4d6ba3b54cec9b20ad2c25366efdea16badfa2edb612b1e41aa15250
+EBUILD krb5-auth-0.7-r1.ebuild 1184 RMD160 df178b0e8f6de2776761e2fcf3071059102d8bdc SHA1 8a58cc5e8e88092e654a3efa44bccddf4d31cf76 SHA256 40a428030ef9c96191538431dd1bdc82f5c74011fd9a48c24bc39a8b3e57416e
+MISC ChangeLog 622 RMD160 c11404d57ee58d5b055ffb930685cf5425d4f553 SHA1 4a3f5c9723d6b236870cab4049cc30dc6857fc3d SHA256 19c88a4a144f9a285f3a0918bf36de0d2f20843849ce25847a08dfd00bb00f7b
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxj4ZIACgkQZihJkut28SuinAD8CUM+lM5pIv1UY84kYOwRDjlw
-fTZIX9QZ6ov5YCxJQcsA/0lEwJT6h8b8k17y6V9F+zJlepr1EPKTae2S6Xu7u3dt
-=S8Jw
+iF4EAREIAAYFAkzWf84ACgkQZihJkut28StyQAEAj7MLqS9YqHat4J71IIE0ELU7
+gTX6hKX4e9QFnsnKmCAA/j24ZXhCHDhEvwwfKf/neY1sn4Gk/mVnGdfp9BonAH+6
+=0fgH
 -----END PGP SIGNATURE-----
