@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2010; Hans de Graaff <graaff@gentoo.org> -krb5-auth-0.7.ebuild,
+  krb5-auth-0.7-r1.ebuild, metadata.xml:
+  Mark ready for ~x86. Remove old version.
+
 *krb5-auth-0.7-r1 (12 Aug 2010)
 
   12 Aug 2010; Hans de Graaff <graaff@gentoo.org> +krb5-auth-0.7-r1.ebuild:
